        - tiny design fixings.
        - mo files regenerated. Copied from wordpress.org
        -add breadcrumb to attachement page
        
    commit #16.11.2
        18 November, 2016
        -add filter of submenu icon (header.php)
        - delete unnecessary lines from css.
        -add array-solution to content date month (php solution was unreliable)
        -widen the content date. to have padding and place for Hungarian months
        
    commit #16.11.3
        30 Nov, 2016
        -change suibmenu icon from chevron to triangle.
        - tiny move down of submenu toggle svg
        - submenu sometimes(!) remain open.
        -po files updated
    
    commit #16.11.4
        3 Dec, 2016
        -upload to repository
        -new filter hooks to header (manduca_background images, mandsuca_after_masthead )
        -add new divs (outer-wrapper, outer-masthead) to header (and outer-wrapper to footer) for easing formating child theme.
        
16.12
    commit #16.12.1
        9 dec, 2016
        - page navigation: svg is included in anchor to be clickable. Design also effected.
        -New hook: manduica_copyright_text in footer.php
        -header search  form: "search" text receives other css class in order to child theme is able to display it. 

    commit #16.12.2
        12 Dec, 2016
        ==bug== menu toggle did not work (since #16.11.1). SVG is now coming from css (base64), not from the html.
        -menu word becomes screen reader text
        -filter of manduca_search_placeholder of input text in search fiels.
        
    commit #16.12.3
        15 Dec, 2016
        ==bug== breadcrumb has wrong code when subpage is displayed.
        - also optimize the breadcrumb function
    
    commit #16.12.4
        - add rem basis to each px unit. Check all.         
        - css:search submit and menu-toggle hover and focus colouring
        - testing with different browsoers and fix proglems. 